--- a/summary.css
+++ b/summary.css
@@ -51,3 +51,24 @@
 	margin-left: 20px;
 	display: inline-block;*/
 }
+
+.conversion {
+	display: inline-block;
+	border: 3px solid #fca;
+	border-radius: 4px;
+	padding-left: 7px;
+	text-decoration: inherit;
+}
+
+.math {
+	background: #fca;
+	display: inline-block;
+	padding-left: 7px;
+	padding-right: 7px;
+	margin-left: 7px;
+	text-decoration: inherit;
+}
+
+.original {
+	display: none;
+}
